# resumeBuilder

./: .gitignore  PROJECT_DOCS.md  README.md  app_prompt.md  build-dmg.sh  index.html  llm_redesign_prompt.md  new_architecture_prompt.md  package-lock.json  package.json  profile_error.txt  step2_logs.txt  tailwind.config.js
python/: docx_parser.py  llm_client.py  main.py  pdf_exporter.py  presets.py  preview_templates.py  requirements.txt  resume-sidecar.spec  resume_extractor.py  test_extract.py  test_extractor.py  user_facing_errors.py
python/pipeline/: controller.py  critic.py  deterministic_validator.py  entity_manifest.py  navigator.py  planner.py  single_shot.py  utils.py
python/templates/: faangpath.html  jake.html  myresume.html  sb2nov.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppSidebar.tsx  ModelPicker.tsx  ResumeEditor.tsx  RoleCombobox.tsx  SectionBlock.tsx  SectionOrderEditor.tsx
src/context/: ConnectionContext.tsx  ProfilesContext.tsx
src/lib/: editorSessionStorage.ts  exportPrefs.ts  httpError.ts  jdAnalysis.ts  persistenceStore.ts  roleSuggestions.ts  sectionOrder.ts  secureStore.ts  sidecarApi.ts  themeStore.ts
src/pages/: Editor.tsx  History.tsx  Settings.tsx  SettingsProfileEdit.tsx  Setup.tsx
src/ui/: Button.tsx  Modal.tsx  SegmentedControl.tsx  Surface.tsx  Typography.tsx  errorFormat.ts  index.ts
template/: myresume.extracted.json  myresume.tex
