[package]
name = "resume-editor"
version = "0.1.0"
description = "A Tauri App"
authors = []
license = ""
repository = ""
default-run = "resume-editor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "resume_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "resume-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
